--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* General Style Start */
+
 @import url('https://fonts.googleapis.com/css2?family=Arvo&family=Secular+One&display=swap');
 
 body {
@@ -6,12 +8,16 @@ body {
     font-family: 'Secular One', sans-serif;
 }
 
-.hero {
-    background-color: wheat
-}
-
 .flex {
     display: flex;
+}
+
+/* General Style Start */
+
+
+/* Hero Section Style Start */
+.hero {
+    background-color: wheat
 }
 
 .color {
@@ -60,3 +66,72 @@ body {
     border-radius: 100%;
     margin: 5px 5px;
 }
+
+/* Hero Section Style End */
+
+
+/* Service Section Style Start */
+
+.service {
+    width: 100%;
+    height: 520px;
+}
+
+.container2 h2 {
+    font-size: 45px;
+    text-shadow: 2px 2px 8px gray;
+    padding-left: 40px;
+}
+
+.container2 p {
+    padding-left: 40px;
+    margin-top: -3%;
+}
+
+.container3 {
+    max-width: 70%;
+    padding: 25px 50px;
+    margin: 20px 40px;
+    box-shadow: 5px 5px 20px black;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+.container3 a {
+    font-size: 65px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.container3 h3 {
+    font-size: 30px;
+    text-align: center;
+}
+
+.container3 p {
+    width: 100%;
+    text-align: justify;
+}
+
+.container4 {
+    width: 100%;
+    height: 600px;
+    padding-left: 30px;
+
+}
+
+.container4 img {
+    font-size: 75px;
+    padding: 20px 40px;
+}
+
+.container4 h1 {
+    font-size: 50px;
+    text-align: center;
+    margin-top: 20%;
+}
+
+
+
+/* Service Section Style End */
