--- a/style.css
+++ b/style.css
@@ -61,11 +61,6 @@ body {
     font-size: 20px;
 }
 
-.you-tube {
-    border: 2px solid black;
-    border-radius: 100%;
-    margin: 5px 5px;
-}
 
 /* Hero Section Style End */
 
@@ -168,5 +163,8 @@ footer p {
     color: antiquewhite;
 }
 
+.btn {
+    padding-left: 10px;
+}
 
 /* Footer Section Style End */
